// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"development" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment "noStyling" variation 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment Default config 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment "noStyling" variation 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment Default config 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "corejs": 3,
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
        "targets": "defaults",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
